# ssu_computer

./: .gitmodules  README.md
FileStructure/: CMakeLists.txt
FileStructure/Project1/: copy.c  delete.c  insert.c  merge.c  overwrite.c  read.c
FileStructure/Project3/: CMakeLists.txt  README.md  blkmap (2).h  blkmap(!).h  devicedriver.h  ftl.c  main.c  project3.hwp
IntelligenceSystem/: main.py  중간고사 요약.ipynb
IntelligenceSystem/20192380_김상엽_중간고사/: house.py  spaceship.py
IntelligenceSystem/HW/: hw.py
IntelligenceSystem/day_03/: lecture_01.py  lecture_02.py  lecture_03.py
IntelligenceSystem/day_04/: lecture_01.py  lecture_02.py  lecture_04.py
IntelligenceSystem/day_05/: lecture_03.py
IntelligenceSystem/day_06/: lecture_02.py  lecture_03.py  lecture_04.py  lecture_05.py
IntelligenceSystem/day_07/: lecture_01.py
IntelligenceSystem/notebooks/day_04/: lecture_01.py
IntelligenceSystem/notebooks/day_05/: lecture_01.py  lecture_02.py  lecture_03.py
IntelligenceSystem/notebooks/day_06/: lecture_01 (2).py  lecture_01.py  lecture_02.py  lecture_05 (2).py  lecture_05.py  lecture_06.py
LinuxProgramming/: .gitignore  CMakeLists.txt
LinuxProgramming/#B10_20192380/chdir/: chdir.c  chdir.docx
LinuxProgramming/#B10_20192380/directory1/: directory1.c  directory1.docx
LinuxProgramming/#B10_20192380/directory2/: directory2.c  directory2.docx
LinuxProgramming/#B10_20192380/getcwd/: getcw.docx  getcwd.c
LinuxProgramming/#B10_20192380/remove/: remove.c  remove.docx
LinuxProgramming/#B10_20192380/rename/: rename.c  rename.docx
LinuxProgramming/#B10_20192380/symlink/: symlink.c  symlink.docx
LinuxProgramming/#B10_20192380/unlink1/: unlink1.c  unlink1.docx
LinuxProgramming/#B10_20192380/unlink2/: unlink2.c  unlink2.docx
LinuxProgramming/#B10_20192380/utime/: utime.c  utime.docx
LinuxProgramming/#B4_20192380_V1/fgets1/: fgets1.c  fgets1.docx
LinuxProgramming/#P1_20192380/: CMakeLists.txt
LinuxProgramming/P1_20192380/: CMakeLists.txt  diff.c  diff.h  my_file.c  my_file.h  my_find.c  my_find.h  slicing.c  slicing.h  ssu_index  ssu_index.c  ssu_sindex.c
LinuxProgramming/P1_20192380/test/: b
LinuxProgramming/P1_20192380/test/dir1/test/: a  b
LinuxProgramming/P1_20192380/test/test/: a
LinuxProgramming/P2_20192380/: CMakeLists.txt  find.c  find.h  hash.c  ssu_find-md5.c  ssu_find-sha1.c  ssu_help.c  ssu_sdup.c  tokenizer.c
LinuxProgramming/P2_20192380/#P2_20192380/: my_structs.c  my_structs.h  ssu_sdup.c  tokenizer.h
LinuxProgramming/P2_20192380/test/: find.c  fmd5  fsha1  hash.h  help  ssu_sdup
LinuxProgramming/P3_20192380/: CMakeLists.txt  ssu_find-md5.h  ssu_find-sha1.h  ssu_help.c  ssu_help.h  ssu_sfinder  ssu_sfinder.c  ssu_sfinder.h
LinuxProgramming/Q3_20192380/: 1.c  2.c  3.c
LinuxProgramming/open/: open.c  open.docx
LinuxProgramming/ssu_sdup/: ssu_find-md5.c  ssu_find-sha1.c  ssu_help.c  ssu_sdup.c  ssu_sdup.h
PageReplacement/src/: pagereferencestring.c  pagereferencestring.h  pagereplacement.c  pagereplacement.h  ui.c  variable.h
programming_language/: HW1 보고서.docx
programming_language/HW1/: Java.java  cpp.cpp  python.py  ~$W1 보고서.docx
programming_language/HW2/: HW2 보고서.docx  README.md  clang.c  javalang.java  python.py
(+179 files in other folders)
